[package]
name = "os"       # or any other name
version = "0.1.0"
edition = "2021"

[build-dependencies]
bootloader = "0.11.8"
blog_os = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.2.1"

[workspace]
members = ["kernel"]
